2015-09-27  James Hunt  <jamesodhunt@ubuntu.com>

	* src/tests/check_all_args.in:
	  - Set LC_ALL to the lang value under test.
	  - Actually save the original LANG value.
	  - 'set -e' fix.

2015-09-25  James Hunt  <jamesodhunt@ubuntu.com>

	* src/procenv.c:
	  - show_libc(): New function for new '--libc'/'-B'
	    option.
	  - show_compiler(): Added following features:
	    - _DEFAULT_SOURCE
	    - _LARGEFILE_SUPPORT
	    - __STDC_VERSION__
	* configure.ac: Add '--enable-reproducible-build' option which
	  suppresses the display of values that will change between
	  builds:
	  - __DATE__
	  - __TIME__
	  - __TIMESTAMP__

2015-08-24  James Hunt  <james.hunt@ubuntu.com>

	* src/tests/check_all_args.in: Actually disable tests if non-existent
	  locale found.

2015-08-23  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c: Coverity fixes:
	  - get_mtu(): Drop useless goto and explicit zero return on error.
	  - get_canonical(): safer string termination.
	  - Allow '--indent-char' to be UTF-8.
	* src/tests/check_all_args.in:
	  - New single-character tests for:
	    - '--indent-char'.
	    - '--separator'.
	  - New multi-character tests for:
	    - '--indent-char'.
	    - '--separator'.
	    - '--crumb-separator'.
	  - Check default locale is valid before attempting to use it.

2015-08-22  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.h: Use __func__ rather than __FUNCTION__ to appease gcc 5.2.

2015-08-21  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c: save_locale(): Specify 2nd arg to setlocale()
	  as "" since the original NULL was not only incorrect, it caused
	  a UTF-8 '--separator' or '--crumb-separator' to cause a crash.
	* src/tests/check_all_args.in:
	  - New tests for UTF-8 '--separator' and '--crumb-separator'.
	  - Show language test being run with.
	  - Ensure full command-line shown on failure.

2015-07-11  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c: show_security_module_context_linux():