@@ -20,10 +20,6 @@
   - change 'number' to 'index' and make it zero-based for consistency
     with affinity list
   - XXX: bump 'format-version' !!
-- Tests:
-  - check man page options vs. 'procenv --help' to look for
-    inconsistencies.
-  - --indent=
 - XXX: run show_compiler_details *before* build to help diagnose
   failures.
 - Add YAML output format?
