@@ -7,6 +7,7 @@ script_name=${0##*/}
 
 # Use full path to build binary
 procenv="@builddir@/procenv"
+man_path="@man_path@"
 
 template="/tmp/${script_name}.XXXXXXXXXX"
 
@@ -105,6 +106,23 @@ _run_command()
 		die "Command '$cmdline' returned $ret but expected $expected_outcome"
 
 	return 0
+}
+
+get_procenv_options()
+{
+	$procenv --help | grep -- '-[a-zA-Z0-9], --[a-zA-Z][a-zA-Z0-9]*' |\
+		cut -d: -f1 | tr ',' '\n' | tr -d ' ' | egrep -v -- '(-h|--help)'
+}
+
+get_man_options()
+{
+	groff -man -Tascii "$man_path" |\
+		col -bx 2>/dev/null |\
+		colcrt - 2>/dev/null |\
+		egrep -- '-[a-zA-Z0-9], --[a-zA-Z0-9]' |\
+		tr ',' '\n' |\
+		tr -d ' ' |\
+		egrep -v -- '(-h|--help)'
 }
 
 init()
@@ -429,9 +447,8 @@ run_tests()
 	
 	#---------------------------------------------------------------------
 	msg "Ensure all documented options produce output"
-	$procenv --help | grep -- '-[a-zA-Z0-9], --[a-zA-Z][a-zA-Z0-9]*' |\
-		cut -d: -f1 | tr ',' '\n' | egrep -v -- '(-h|--help)' |\
-		while read arg
+	procenv_options=$(get_procenv_options)
+	echo "$procenv_options" | while read arg
 	do
 		stdout=$(mktemp "$template")
 		stderr=$(mktemp "$template")
@@ -585,6 +602,26 @@ run_tests()
 	fi
 }
 
+run_final_tests()
+{
+	# check options specified in man page exactly correlate with
+	# those documented by procenv (and vice versa)
+	procenv_options=$(get_procenv_options)
+	man_options=$(get_man_options)
+
+	for opt in $procenv_options
+	do
+		echo "$man_options"|grep -q "^${opt}$" ||\
+			die "failed to find option '$opt' in man page: $man_path"
+	done
+
+	for opt in $man_options
+	do
+		echo "$procenv_options"|grep -q "^${opt}$" ||\
+			die "failed to find option '$opt' in procenv help output"
+	done
+}
+
 #---------------------------------------------------------------------
 
 init
@@ -601,6 +638,8 @@ do
 	export LANG="$lang" LC_ALL="$lang"
 	run_tests
 done
+
+run_final_tests
 
 [ -n "$saved_lang" ] && export LANG="$saved_lang" LC_ALL="$saved_lang"
 
